--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.14.0",
     "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@webpack-cli/generators": "^3.0.7",
     "babel-jest": "^29.7.0",
     "coveralls": "^3.1.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.14.0",
+    "firebase": "^11.0.2",
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.6",
@@ -41,6 +44,8 @@
     "mini-css-extract-plugin": "^2.9.1",
     "nodeunit": "^0.11.3",
     "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "ts-node-dev": "^2.0.0",
