--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^7.1.2",
     "eslint": "^9.14.0",
     "firebase": "^11.0.2",
+    "fuzzysearch": "^1.0.3",
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.6",
@@ -54,5 +55,8 @@
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
+  },
+  "dependencies": {
+    "react-calendar": "^5.1.0"
   }
 }
