--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.14.0",
     "@types/jest": "^29.5.14",
@@ -30,6 +31,7 @@
     "@types/react-dom": "^18.3.1",
     "@webpack-cli/generators": "^3.0.7",
     "babel-jest": "^29.7.0",
+    "babel-loader": "^9.2.1",
     "coveralls": "^3.1.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.14.0",
@@ -57,6 +59,9 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "react-calendar": "^5.1.0"
   }
 }
