--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.14.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -40,8 +43,10 @@
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.6",
+    "identity-obj-proxy": "^3.0.0",
     "istanbul": "^0.4.5",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jscoverage": "^0.6.0",
     "lint-staged": "^15.2.10",
     "mini-css-extract-plugin": "^2.9.1",
@@ -50,6 +55,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "style-loader": "^4.0.0",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
@@ -64,6 +70,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "fuse.js": "^7.0.0",
     "react-calendar": "^5.1.0",
     "styled-components": "^6.1.13"
   }
