--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "My webpack project",
+  "description": "calendar development",
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
     "coveralls": "npm run coverage",
     "coverage": "type .\\coverage\\lcov.info | coveralls",
-    "build": "npm run test && webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve",
+    "start": "webpack serve",
     "lint": "eslint .",
     "lint:fix": "npx eslint . --fix",
     "format": "prettier --write .",
@@ -27,20 +23,14 @@
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.14.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
     "@webpack-cli/generators": "^3.0.7",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
     "coveralls": "^3.1.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.14.0",
-    "firebase": "^11.1.0",
-    "firebase-tools": "^13.29.1",
-    "fuzzysearch": "^1.0.3",
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.6",
@@ -53,8 +43,6 @@
     "mini-css-extract-plugin": "^2.9.1",
     "nodeunit": "^0.11.3",
     "prettier": "^3.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
@@ -64,15 +52,5 @@
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
-  },
-  "dependencies": {
-    "@fullcalendar/core": "^6.1.15",
-    "@fullcalendar/daygrid": "^6.1.15",
-    "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15",
-    "@fullcalendar/timegrid": "^6.1.15",
-    "fuse.js": "^7.0.0",
-    "react-calendar": "^5.1.0",
-    "styled-components": "^6.1.13"
   }
 }
