--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "coveralls": "^3.1.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.14.0",
+    "fuse.js": "^7.0.0",
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.6",
