--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "coveralls": "^3.1.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.14.0",
+    "firebase": "^11.1.0",
+    "firebase-tools": "^13.29.1",
     "fuse.js": "^7.0.0",
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.0",
